--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,10 @@ url: "https://idioticprogramape.github.io"
 github_username:  IdioticProgramApe
 
 # Build settings
-theme: "just-the-docs"
 remote_theme: just-the-docs/just-the-docs
+
+# For local debugging
+# theme: "just-the-docs"
 
 permalink: pretty
 exclude: [
