--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Mumbo Jumbo IPA
+title: Some Mumbo-Jumbos...
 email: jiafeng_han@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is a mumbo jumbo space, let's start to take notes.
