--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ github_username:  IdioticProgramApe
 remote_theme: just-the-docs/just-the-docs
 
 # For local debugging
-# theme: "just-the-docs"
+theme: "just-the-docs"
 
 permalink: pretty
 exclude: [
