--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -7,6 +7,12 @@
 name: Deploy Jekyll site to Pages
 
 on:
+  # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows#schedule
+  # Runs at 6:00 UTC and 18:00 UTC every day
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: '0 6,18 * * *'
+
   # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
