--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -52,8 +52,11 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
 
-      # - name: Test Site
-      #   run: bash tools/test
+      - name: Init Site
+        run: bash tools/init
+
+      - name: Test Site
+        run: bash tools/test
 
       - name: Setup Pages
         id: pages
